# MPE

./: .gitignore  CMakeLists.txt  MPE.cpp  MPE.h  README.md
IMPORTANT CMAKE/: cmakelist.txt
source/MPE/: MPE.h  MPEPCH.cpp  MPEPCH.h
source/MPE/Base/: App.cpp  App.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Window.h  _CORE.h  _TIME.h
source/MPE/Base/Events/: Event.h  EventApp.h  EventKey.h  EventMouse.h
source/MPE/Base/Input/: Input.h  KeyCodes.h
source/MPE/Base/Layers/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
source/MPE/Debug/Profiling/: _PROFILING.h  _TIMER.h
source/MPE/Events/: Event.h  EventApp.h  EventKey.h  EventMouse.h
source/MPE/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
source/MPE/Platform/OpenGL/: OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h
source/MPE/Platform/OpenGL/Pipeline/: OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
source/MPE/Platform/OpenGL/Shaders/: OpenGLShader.cpp  OpenGLShader.h
source/MPE/Platform/OpenGL/Textures/: OpenGLTexture.cpp  OpenGLTexture.h  OpenGLTexture2D.cpp  OpenGLTexture2D.h
source/MPE/Platform/windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
source/MPE/Renderer/: GraphicalContext.h  RenderPrimitive.cpp  RenderPrimitive.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h
source/MPE/Renderer/Cameras/: OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  StaticOrthographicCamera.cpp  StaticOrthographicCamera.h
source/MPE/Renderer/Pipeline/: BufferLayout.cpp  BufferLayout.h  IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
source/MPE/Renderer/Shaders/: Shader.cpp  Shader.h  ShaderLibrary.cpp  ShaderLibrary.h
source/MPE/Renderer/Textures/: Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h
source/Projects/Pong/: ProjectSelector.cpp
source/Projects/Pong/source/: Pong.cpp  Pong.h
source/Projects/Pong/source/Core/: Ball.cpp  Ball.h  Game.cpp  Game.h  Player.cpp  Player.h
source/Sandbox/: Example.cpp  Sandbox.cpp
source/Sandbox/Sandbox2D/: Sandbox2D.cpp  Sandbox2D.h
utility/scripts/windows/: CPBMDTB.bat
